<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IQTimeSheet</string>
    <string name="icon_add_task">ic_task_add.png</string>
    <string name="taskedit">Edit Task</string>
    <string name="taskretire">Retire Task</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_revive_task">Revive Task</string>
    <string name="menu_edit_day_entries">Edit Entries</string>
    <string name="menu_reports">Day Report</string>
    <string name="menu_week_reports">Week Report</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_backup">Backup Database</string>
    <string name="menu_restore">Restore Database</string>
    <string name="menu_about">About</string>
    <string name="menu_scrubdb">Scrub Database</string>
    <string name="startlabel">Start Time</string>
    <string name="endlabel">End Time</string>
    <string name="day_prev_action">Previous</string>
    <string name="day_today_action">Today</string>
    <string name="day_next_action">Next</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="sixminalign">Align (1 min)</string>
    <string name="about_summary">IQTimeSheet is my first Android application. It is based on a few
		other similar applications both in function and style. Hopefully
		you\'ll find it useful. The source code is available on <a href="https://github.com/kronenpj/iqtimesheet/">https://github.com/kronenpj/iqtimesheet/</a> and is released under the Apache license.</string>
    <string name="changeadjacent">Accept &amp; Change Adjacent</string>
    <string name="auto_align_summary_on">Automatically align to an X minute-increment when clocking in/out
		or changing times.</string>
    <string name="auto_align_summary_off">Manually choose to align to an X minute-increment when editing entries.</string>
    <string name="timepicker_align_summary_on">Time picker dialog will step by align minutes steps at a time.</string>
    <string name="timepicker_align_summary_off">Time picker dialog will behave as usual, stepping by 1 minute at a time.</string>
    <string name="split_task_desc">This is part of a split task</string>
    <string name="totals_fontsize_summary">Font size for the totals footer on reports.  14 is the Android default.</string>
    <string name="fontsize_tasklist_summary">Font size for the task list.  20 is readable.</string>
    <string name="align_minutes_title">Snap to X minute increments</string>
    <string name="align_minutes_summary">Choose an interval to align minutes</string>
    <string name="hours_day_title">Hours per day</string>
    <string name="hours_day_summary">Hours normally worked per day</string>
    <string name="hours_week_title">Hours per week</string>
    <string name="hours_week_summary">Hours normally worked per week</string>
    <string name="week_start_day_title">Week start day</string>
    <string name="week_start_day_summary">Start day of the week</string>
    <string name="week_start_hour_title">Week day split hour</string>
    <string name="week_start_hour_summary">Hour of the day where the week splits</string>
    <string name="tz_anchor_title">Select anchor time zone</string>
    <string name="tz_anchor_summary">Anchor time zone for midnight and cross-day checks</string>
    <string name="backup_sd_title">Enable backups?</string>
    <string name="backup_sd_summary_on">Backups of time database will be made on SD card</string>
    <string name="backup_sd_summary_off">Backups of time database are disabled</string>
    <string name="align_minutes_auto">Align minutes automatically?</string>
    <string name="align_within_time_picker">Align time within Time Picker?</string>
    <string name="totals_font_size">Totals Font Size</string>
    <string name="fontsize_tasklist">Tasklist Font Size</string>
    <string name="select_parent_task">Select parent task</string>
    <string name="scrub_database">Scrub the database</string>
    <string name="notification_title">Clocked in…</string>
    <string name="title_section1">Select Task</string>
    <string name="title_section2">Day Report</string>
    <string name="title_section3">Week Report</string>
    <string name="restore_title">"This will overwrite the database.  Proceed?"</string>
    <string name="DefaultPercentage">100</string>
    <string name="PercentSign">%</string>
    <string name="task_last_used">Task last used: %s</string>
    <string name="TASK_TABLE_CREATE">
        CREATE TABLE
        Tasks (
          _id INTEGER PRIMARY KEY AUTOINCREMENT,
          task TEXT NOT NULL,
          active BOOLEAN NOT NULL DEFAULT 1,
          usage INTEGER NOT NULL DEFAULT 0,
          oldusage INTEGER NOT NULL DEFAULT 0,
          lastused INTEGER NOT NULL DEFAULT 0,
          split INTEGER DEFAULT 0
        );
    </string>
</resources>
