<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/alignminutetext"
        android:entryValues="@array/alignminutes"
        android:key="align.minutes"
        android:order="10"
        android:summary="@string/align_minutes_summary"
        android:title="@string/align_minutes_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="align.minutes.auto"
        android:order="20"
        android:summaryOff="@string/auto_align_summary_off"
        android:summaryOn="@string/auto_align_summary_on"
        android:title="@string/align_minutes_auto" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="align.time.picker"
        android:order="25"
        android:summaryOff="@string/timepicker_align_summary_off"
        android:summaryOn="@string/timepicker_align_summary_on"
        android:title="@string/align_within_time_picker" />

    <EditTextPreference
        android:defaultValue="8"
        android:key="hours.day"
        android:order="30"
        android:summary="@string/hours_day_summary"
        android:title="@string/hours_day_title" />

    <EditTextPreference
        android:defaultValue="40"
        android:key="hours.week"
        android:order="40"
        android:summary="@string/hours_week_summary"
        android:title="@string/hours_week_title" />

    <ListPreference
        android:key="week.startday"
        android:entries="@array/daystrings"
        android:entryValues="@array/dayints"
        android:order="43"
        android:summary="@string/week_start_day_summary"
        android:title="@string/week_start_day_title" />

    <ListPreference
        android:key="week.starthour"
        android:entries="@array/hours"
        android:entryValues="@array/hours"
        android:order="47"
        android:summary="@string/week_start_hour_summary"
        android:title="@string/week_start_hour_title" />

    <EditTextPreference
        android:defaultValue="14.0"
        android:key="total.fontSize"
        android:order="50"
        android:summary="@string/totals_fontsize_summary"
        android:title="@string/totals_font_size" />

    <EditTextPreference
        android:defaultValue="12.0"
        android:key="fontSize.tasklist"
        android:order="60"
        android:summary="@string/fontsize_tasklist_summary"
        android:title="@string/fontsize_tasklist" />

    <ListPreference
        android:key="tz.anchor"
        android:order="70"
        android:summary="@string/tz_anchor_summary"
        android:title="@string/tz_anchor_title"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="persistent.notification"
        android:order="80"
        android:summaryOff="Enable persistent notifications"
        android:summaryOn="Disable persistent notifications"
        android:title="Persistent notifications" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="db.on.sdcard"
        android:order="100"
        android:summaryOff="@string/backup_sd_summary_off"
        android:summaryOn="@string/backup_sd_summary_on"
        android:title="@string/backup_sd_title" />

</PreferenceScreen>
