<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/list"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout="@layout/addtask">

    <TextView
        android:id="@+id/TextLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskedit" />

    <EditText
        android:id="@+id/EditTask"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextLabel"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/SplitTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTask"
        android:layout_gravity="start"
        android:text="@string/split_task_desc" />

    <Button
        android:id="@+id/CancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SplitTask"
        android:layout_gravity="start"
        android:layout_marginLeft="7dip"
        android:layout_marginStart="7dip"
        android:width="150dip"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/ChangeTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SplitTask"
        android:layout_gravity="end"
        android:layout_marginEnd="7dip"
        android:layout_marginRight="7dip"
        android:layout_toEndOf="@+id/CancelEdit"
        android:layout_toRightOf="@+id/CancelEdit"
        android:width="150dip"
        android:text="@string/accept" />

    <TextView
        android:id="@+id/ParentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CancelEdit"
        android:paddingTop="2dip"
        android:text="@string/select_parent_task"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/TaskSpinner"
        style="@android:style/TextAppearance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ParentLabel"
        android:visibility="gone">
        <!-- android:textColor="@android:color/primary_text_dark" -->
        <!-- Preview: listitem=@android:layout/simple_spinner_item -->
    </Spinner>

    <EditText
        android:id="@+id/PercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/PercentSymbol"
        android:layout_toLeftOf="@+id/PercentSymbol"
        android:layout_toStartOf="@+id/PercentSymbol"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/DefaultPercentage"
        android:visibility="gone" />

    <TextView
        android:id="@+id/PercentSymbol"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TaskSpinner"
        android:text="@string/PercentSign"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/PercentSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/PercentLabel"
        android:visibility="gone" />

    <ListView
        android:id="@+id/childlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CancelEdit"
        android:visibility="gone" />

</RelativeLayout>