<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/daytable"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout="@layout/daybuttons"
    android:orientation="horizontal">

    <Button
        android:id="@+id/previous"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_weight="1"
        android:text="@string/day_prev_action" />

    <Button
        android:id="@+id/today"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_weight="1"
        android:text="@string/day_today_action" />

    <Button
        android:id="@+id/next"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_weight="1"
        android:text="@string/day_next_action" />

</LinearLayout>