<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="@+id/fragment_weekreportlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/fragment_weekreportlist"
    android:orientation="vertical"
    android:paddingBottom="0dip"
    android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip"
    android:tag="WeekReport"
    tools:context=".TaskListFragment" >

    <TextView
        android:id="@+id/weekheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <ListView
        android:id="@+id/weekList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/weekfooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <LinearLayout
        android:id="@+id/weekbuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/wprevious"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_weight="1"
            android:text="@string/day_prev_action" />

        <Button
            android:id="@+id/wtoday"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="1"
            android:text="@string/day_today_action" />

        <Button
            android:id="@+id/wnext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_weight="1"
            android:text="@string/day_next_action" />
    </LinearLayout>

</LinearLayout>
