<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="@+id/fragment_reportlist"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout="@layout/fragment_reportlist"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tag="DayReport"
    tools:context=".TaskListFragment" >

    <TextView
        android:id="@+id/reportheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <ListView
        android:id="@+id/reportList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/reportfooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <LinearLayout
        android:id="@+id/daybuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/previous"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_weight="1"
            android:text="@string/day_prev_action" />

        <Button
            android:id="@+id/today"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="1"
            android:text="@string/day_today_action" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_weight="1"
            android:text="@string/day_next_action" />
    </LinearLayout>

</LinearLayout>